[gd_scene load_steps=9 format=2]

[ext_resource path="res://UserInterface/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actor/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actor/Paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/sprite-sheet.png" type="Texture" id=4]
[ext_resource path="res://Screens/PlayScene.gd" type="Script" id=5]
[ext_resource path="res://Screens/EndScene.tscn" type="PackedScene" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 329.949, 290.829, 8.54077, 290.829, 12.688, 17.1139, 329.949, 19.1875 )

[sub_resource type="TileSet" id=2]
0/name = "sprite-sheet.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1088, 1096, 342, 302 )
0/tile_mode = 0
0/occluder_offset = Vector2( 64, 64 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="PlayScene" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 376.0, 528.0, 280.0, 524.188, 24.0, 192.0, 128.0, 16.0, 495.64, 482.0, 56.0, 504.915, 600.0 ],
"_edit_vertical_guides_": [ 64.0, 936.0, 450.241, 448.343, 703.0, 192.0, 432.0, 469.981, 429.121, 450.477, 452.359, 0.0, 1048.0 ]
}
next_scene = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( -56, -48 )
scale = Vector2( 0.930232, 0.93913 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 192.405, 2291.3, 1290.21, 690.211 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 514.359, 480 )
scale = Vector2( 0.2, 0.2 )
collision_layer = 4
collision_mask = 9

[node name="Paddle" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 504 )
scale = Vector2( 0.4, 0.4 )

[node name="Wall" type="TileMap" parent="."]
scale = Vector2( 0.2, 0.2 )
tile_set = SubResource( 2 )
cell_size = Vector2( 335, 300 )
cell_clip_uv = true
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 131071, 0, 0, 65536, 0, 0, 65550, 0, 0, 65551, 0, 0, 196607, 0, 0, 131072, 0, 0, 131086, 0, 0, 131087, 0, 0, 262143, 0, 0, 196608, 0, 0, 196622, 0, 0, 196623, 0, 0, 327679, 0, 0, 262144, 0, 0, 262158, 0, 0, 262159, 0, 0, 393215, 0, 0, 327680, 0, 0, 327694, 0, 0, 327695, 0, 0, 458751, 0, 0, 393216, 0, 0, 393230, 0, 0, 393231, 0, 0, 524287, 0, 0, 458752, 0, 0, 458766, 0, 0, 458767, 0, 0, 589823, 0, 0, 524288, 0, 0, 524302, 0, 0, 524303, 0, 0, 655359, 0, 0, 589824, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="Fire" type="Sprite" parent="."]

[node name="sprite" type="Sprite" parent="Fire"]
position = Vector2( 40, 576 )
scale = Vector2( 0.2, 0.1 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 27.6542, 1467.58, 1338.24, 450.822 )

[node name="sprite2" type="Sprite" parent="Fire"]
position = Vector2( 272, 576 )
scale = Vector2( 0.2, 0.1 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 27.6542, 1467.58, 1338.24, 450.822 )

[node name="sprite3" type="Sprite" parent="Fire"]
position = Vector2( 522.4, 576 )
scale = Vector2( 0.2, 0.1 )
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 27.6542, 1467.58, 1338.24, 450.822 )

[node name="sprite4" type="Sprite" parent="Fire"]
position = Vector2( 760, 576 )
scale = Vector2( 0.2, 0.1 )
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 27.6542, 1467.58, 1338.24, 450.822 )

[node name="sprite5" type="Sprite" parent="Fire"]
position = Vector2( 992, 576 )
scale = Vector2( 0.2, 0.1 )
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 27.6542, 1467.58, 1338.24, 450.822 )

[node name="UserInterface" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="UI" parent="UserInterface" instance=ExtResource( 1 )]

[node name="Score" parent="UserInterface/UI" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 212.0
margin_bottom = 50.0

[node name="CountDown" parent="UserInterface/UI" index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.523
margin_top = -100.0
margin_right = -61.523
margin_bottom = 99.0
align = 1

[node name="Node" type="Node" parent="."]

[connection signal="damage" from="Ball" to="." method="_on_Ball_damage"]

[editable path="Paddle"]
[editable path="UserInterface/UI"]
